<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:breakStrategy="high_quality"
    android:hyphenationFrequency="normal"
    android:textAppearance="?attr/textAppearanceBodySmall"
    android:textColor="?attr/colorOnSurfaceVariant"
    tools:text="Время: 08:20–09:50 → 10:00–11:30" />
